# qce26_numerics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: opt.h
src/: adjacency.c  adjacency_9ex1.c  adjacency_9ex2.c  adjacency_9ex3.c  binsert.c  binsert_9ex1.c  binsert_9ex2.c  binsert_9ex3.c  bubbles.c  bubbles_9ex1.c  bubbles_9ex2.c  bubbles_9ex3.c  opt_internal.h  opt_nlopt.c  opt_run.c  oracle_ctx.c  oracle_ctx.h
